# modern-cli-mcp

./: .dockerignore  .editorconfig  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  Dockerfile.prebuilt  LICENSE  MCP_REGISTRY.md  README.md  RELEASE_NOTES.md  RELEASE_WORKFLOW.md  checks.nix  default.nix  flake.nix  githooks.nix  pkgs.nix  server.json  shell.nix
.agent-memory/: active-context.md  changelog.md  product-context.md  progress.md  project-brief.md  system-patterns.md  tech-context.md
.claude/: settings.json
.claude/agents/: cli-tools-expert.md  rust-mcp-expert.md
.claude/commands/: release.md
.github/workflows/: ci.yml  claude.yml  pages.yml  publish.yml
docs/: dynamic-filtering-design.md  virtual-tools-design.md
memory-bank/: activeContext.md  changelog.md  productContext.md  progress.md  projectBrief.md  systemPatterns.md  techContext.md
src/: format.rs  groups.rs  ignore.rs  main.rs  state.rs
src/tools/: executor.rs  grouped.rs  mod.rs
tests/: json_helpers.rs  tool_integration.rs
website/: docs.html  index.html  package.json  tools.html  uno.config.ts
website/public/: styles.css
website/src/: index.ts
