# modern-cli-mcp/Cargo.toml
[package]
name = "modern-cli-mcp"
version = "0.2.0"
edition = "2021"
authors = ["Roger Navelsaker"]
description = "MCP server exposing modern CLI tools like eza, bat, fd, rg, delta, and more"
license = "MIT"
repository = "https://github.com/hellst0rm/modern-cli-mcp"
homepage = "https://github.com/hellst0rm/modern-cli-mcp"
readme = "README.md"
keywords = ["mcp", "cli", "tools", "ai", "llm"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
rmcp = { version = "0.8", features = [
    "server",
    "macros",
    "transport-io",
    "schemars",
] }
tokio = { version = "1", features = [
    "macros",
    "rt-multi-thread",
    "io-std",
    "process",
    "fs",
    "sync",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "1.0"
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
which = "7.0"
shellwords = "1.1"

[profile.release]
lto = true
codegen-units = 1
strip = true

[[bin]]
name = "modern-cli-mcp"
path = "src/main.rs"
